Add contact, add avis, changement de blanshe vers single pro,

--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,19 @@
 page-contact {
+.list-md {
+    margin: -10px 0 11px !important;
+}
+.asterisk{
+	color: red
+}
+.check{
+	    font-size: 14px;
+}
+.message{
+	    font-size: 15px;
 
+}
+.remarque{
+	    font-size: 14px;
+
+}
 }
