--- a/src/app/app.html
+++ b/src/app/app.html
@@ -54,7 +54,10 @@
             <ion-icon name="ios-information-circle"></ion-icon>
             A propos
         </button>
-
+        <button class="btn" ion-item icon-start (click)="onNavigate(contactPage)">
+            <ion-icon name="ios-information-circle"></ion-icon>
+            Contactez-nous
+        </button>
 
     </ion-list>
   </ion-content>
